2008-06-10  Dan Williams  <dcbw@redhat.com>

	Fix up for symbol renames for ethernet and wifi devices in libnm-glib

2008-06-09  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wep-key.c
		- (ws_wep_key_new): don't crash if the connection doesn't have wireless
			security yet (like in the Create New... dialog)

2008-06-09  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wireless.c
		- (wifi_available_dont_show_cb): fix comparison that caused applet to
			not save the "don't show again" preference

2008-06-06  Dan Williams  <dcbw@redhat.com>

	Patch from Colin Walters <walters@verbum.org>

	* src/applet.c
		- (status_icon_activate_cb, status_icon_popup_menu_cb): clear any
			notification when the user clicks on the applet icon

2008-06-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
	  src/applet.h
		- (applet_do_notify): add action support

	* src/applet-device-wireless.c
		- (wifi_available_dont_show_cb): suppress notification of APs when the
			user says so
		- (idle_check_avail_access_point_notification): add suppression action
		- (queue_avail_access_point_notification): don't show the notificiation
			if it's suppressed

	* src/applet-device-gsm.c
	  src/applet-device-cdma.c
	  src/applet-device-wired.c
	  src/applet.c
		- Fix for applet_do_notify() changes

2008-06-05  Dan Williams  <dcbw@redhat.com>

	Patch from Colin Walters <walters@verbum.org>  (gnome.org #534427)

	* src/applet.c
	  src/applet.h
		- (applet_get_settings): add accessor for settings object

	* src/applet-device-wireless.c
		- Notify the user about available wireless networks if there is no
			connection and there aren't any matching saved networks

2008-05-29  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (connection_combo_init): when creating a new adhoc network, only show
			existing Ad-Hoc 'shared' connections
		- (nma_wireless_dialog_get_connection): when creating a new adhoc
			network, set the connection's ip4 method to 'shared'
